--- a/index1.html
+++ b/index1.html
@@ -6,20 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style2.css">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/style2.css">
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+
 
     <title>FoodVlogz</title>
 
@@ -31,34 +27,40 @@
 
         <!-- NAV BAR -->
 
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" style="font-size: 1.5rem;" href="#">FoodVlogz</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </li>
-                    <li class="nav-item" id="login">
-                        <a class="nav-link" href="#">Register/Login</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-                </form>
+                <a class="navbar-brand" href="#">foodVlogz</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active hov" id="home" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" id="about" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" id="contact" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search for Recepies"
+                            aria-label="Search">
+                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                    </form>
+                    <div class="header-button">
+                        <button type="button" class="btn btn-1 btn-dark" id="register">Register</button>
+                        <button type="button" class="btn btn-1 btn-outline-dark">Sign In</button>
+                    </div>
+                </div>
             </div>
         </nav>
+
 
         <!-- TOP BODY-->
 
@@ -72,26 +74,26 @@
                     aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="1000">
-                    <img class="carousel-images" src="img/tandoori.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-item active" data-bs-interval="4000">
+                    <img class="carousel-images" src="img/home1 (1).jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h2>We welcome you to the world of food</h2>
+                        <p>The world full of of recipes of different food of different part of the world</p>
                     </div>
 
                 </div>
 
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="4000">
 
-                    <img class="carousel-images" src="img/paneer.jpg" class="d-block w-100" alt="...">
+                    <img class="carousel-images" src="img/home1 (2).jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h2>Fresh recipes coming soon...</h2>
+                        <p>New starter recipes coming soon</p>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img class="carousel-images" src="img/biryani.jpg" class="d-block w-100" alt="...">
+                    <img class="carousel-images" src="img/home1 (3).jpg" class="d-block" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -118,10 +120,11 @@
 
                 <div class="food-column col-lg-3 col-md-6">
                     <div class="card">
-                        <img src="img/starter.png" class="card-img-top" id="img1" alt="...">
+                        <img src="img/starter1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">STARTER</h5>
-                            <p class="card-text">Start your food with our special starters.</p>
+                            <h5 class="card-title">Starter</h5>
+                            <p class="card-text">Have a look before having a maincourse...
+                            </p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
@@ -130,11 +133,21 @@
 
                 <div class="food-column col-lg-3 col-md-6">
                     <div class="card">
-                        <img src="img/veg.png" class="card-img-top" id="img2" alt="...">
+                        <img src="img/veg1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">VEG</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-                                sed.
+                            <h5 class="card-title">Veg</h5>
+                            <p class="card-text">Are you vegetarian then its for you...
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="food-column col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/nonveg1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Non-Veg</h5>
+                            <p class="card-text">Wants to have a rich protein diet, Click here...
                             </p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
@@ -143,24 +156,10 @@
 
                 <div class="food-column col-lg-3 col-md-6">
                     <div class="card">
-                        <img src="img/nonveg.png" class="card-img-top" id="img3" alt="...">
+                        <img src="img/dessert1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">NON-VEG</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit,
-                                eum?
-                            </p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="food-column col-lg-3 col-md-6">
-                    <div class="card">
-                        <img src="img/desert.png" class="card-img-top" id="img4" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">DESERT</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat,
-                                nihil!
+                            <h5 class="card-title">Dessert</h5>
+                            <p class="card-text">Its always incomplete without dessert...
                             </p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
@@ -217,18 +216,18 @@
 
     <section id="cta">
 
-        <h3 class="cta-heading">Order the best in the City.</h3>
-        <button class="btn btn-lg btn-dark download-button" type="button">Download</button>
-        <button class="btn btn-lg btn-light download-button" type="button">Download</button>
+        <h3 class="cta-heading">Read the best, Eat the best.</h3>
+        <!-- <button class="btn btn-lg btn-dark download-button" type="button">Download</button> -->
+        <button class="btn btn-lg btn-light download-button btn-outline-dark" type="button">Download</button>
 
     </section>
 
     <!-- FOOTER -->
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/">Linkedin</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://youtube.com/c/FoodVlogz">YouTube</a>
+        <a class="footer-link" href="#">Instagram</a>
+        <a class="footer-link" href="#">Facebook</a>
         <p class="copyright">©️ 2022 FoodVlogz. All rights reserved.</p>
     </div>
 
