--- a/index.html
+++ b/index.html
@@ -5,117 +5,232 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoodVlogz</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="CSS/style.css">
-    
+
+    <link rel="stylesheet" href="css/style.css">
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
+    <title>FoodVlogz</title>
+
 </head>
 
+
 <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">FoodVlogz</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <section id="main-title">
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav_item">
-                    <a  class="nav-link" href="#">Contact Us</a>
-                </li>
-                <li class="nav_item">
-                    <a id="login" class="nav-link" href="#">Login</a>
-                </li>
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+        <!-- NAV BAR -->
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="#">foodVlogz</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active hov" id="home" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" id="about" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" id="contact" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search for Recepies"
+                            aria-label="Search">
+                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                    </form>
+                    <div class="header-button">
+                        <button type="button" class="btn btn-1 btn-dark" id="register">Register</button>
+                        <button type="button" class="btn btn-1 btn-outline-dark">Sign In</button>
                     </div>
-                </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search for recipies" aria-label="Search">
-                <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-            </form>
-        </div>
-    </nav>
-
-    <!-- background -->
-    <section id="testimonials">
-        <div id="testimonial-carousel" class="carousel slide" data-ride="false">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <!-- <h2>Tandoori Special</h2> -->
-                    <img class="testimonial-image" src="img/tandoori.jpg" alt="dog-profile">
-                    <em>Delhi,New Delhi</em>
-                </div>
-                <div class="carousel-item">
-                    <!-- <h2 class="testimonial-text">Masala Biryaani</h2> -->
-                    <img class="testimonial-image" src="img/biryani.jpg" alt="lady-profile">
-                    <em>Moradabad,UP</em>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        </nav>
+
+
+        <!-- TOP BODY-->
+
+        <div id="carousel-title" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carousel-title" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carousel-title" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carousel-title" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="4000">
+                    <img class="carousel-images" src="img/home1 (1).jpg" class="d-block" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>We welcome you to the world of food</h2>
+                        <p>The world full of of recipes of different food of different part of the world</p>
+                    </div>
+
+                </div>
+
+                <div class="carousel-item" data-bs-interval="4000">
+
+                    <img class="carousel-images" src="img/home1 (2).jpg" class="d-block" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Fresh recipes coming soon...</h2>
+                        <p>New starter recipes coming soon</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="carousel-images" src="img/home1 (3).jpg" class="d-block" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel-title" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel-title" data-bs-slide="next">
                 <span class="carousel-control-next-icon"></span>
-            </a>
+            </button>
+        </div>
+
+
+    </section>
+
+    <!-- FOOD COLUMN -->
+
+    <section id="main-course">
+
+        <div class="row">
+            <div class="card-group">
+
+                <div class="food-column col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/starter1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Starter</h5>
+                            <p class="card-text">Have a look before having a maincourse...
+                            </p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="food-column col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/veg1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Veg</h5>
+                            <p class="card-text">Are you vegetarian then its for you...
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="food-column col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/nonveg1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Non-Veg</h5>
+                            <p class="card-text">Wants to have a rich protein diet, Click here...
+                            </p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="food-column col-lg-3 col-md-6">
+                    <div class="card">
+                        <img src="img/dessert1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dessert</h5>
+                            <p class="card-text">Its always incomplete without dessert...
+                            </p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <!-- Specials -->
-<div class="card-group">
-    <div class="card">
-      <img src="img/starter.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4 class="card-title">Starter</h4>
-        <p class="card-text">Start your food with our special starters.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-        <img src="img/veg.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h4 class="card-title">Veg</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, sed.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+
+    <!-- STATES -->
+
+    <section id="all-states">
+        <div class="states">
+            <p class="state-heading">Know your State Food</p>
+
+            <div class="individual-state">
+                <a href="#" class="state-food">Andhra Pradesh</a>
+                <a href="#" class="state-food">Arunachal Pradesh</a>
+                <a href="#" class="state-food">Assam</a>
+                <a href="#" class="state-food">Bihar</a>
+                <a href="#" class="state-food">Chhattisgarh</a>
+                <a href="#" class="state-food">Goa</a>
+                <a href="#" class="state-food">Gujrat</a>
+                <a href="#" class="state-food">Haryana</a>
+                <a href="#" class="state-food">Himachal Pradesh</a>
+                <a href="#" class="state-food">Jammu & Kashmir</a>
+                <a href="#" class="state-food">Jharkhand</a>
+                <a href="#" class="state-food">Karnataka</a>
+                <a href="#" class="state-food">Kerela</a>
+                <a href="#" class="state-food">Madhya Pradesh</a>
+                <a href="#" class="state-food">Maharashtra</a>
+                <a href="#" class="state-food">Manipur</a>
+                <a href="#" class="state-food">Meghalaya</a>
+                <a href="#" class="state-food">Mizoram</a>
+                <a href="#" class="state-food">Nagaland</a>
+                <a href="#" class="state-food">Odisha</a>
+                <a href="#" class="state-food">Punjab</a>
+                <a href="#" class="state-food">Rajasthan</a>
+                <a href="#" class="state-food">Sikkim</a>
+                <a href="#" class="state-food">Tamil Nadu</a>
+                <a href="#" class="state-food">Telanghana</a>
+                <a href="#" class="state-food">Tripura</a>
+                <a href="#" class="state-food">Uttar Pradesh</a>
+                <a href="#" class="state-food">Uttarakhand</a>
+                <a href="#" class="state-food">West Bengal</a>
+
+            </div>
+
         </div>
-      </div>
-    <div class="card">
-      <img src="img/nonveg.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4 class="card-title">Non-Veg</h4>
-        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, distinctio?.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+    </section>
+
+    <!-- DOWNLOAD -->
+
+    <section id="cta">
+
+        <h3 class="cta-heading">Read the best, Eat the best.</h3>
+        <!-- <button class="btn btn-lg btn-dark download-button" type="button">Download</button> -->
+        <button class="btn btn-lg btn-light download-button btn-outline-dark" type="button">Download</button>
+
+    </section>
+
+    <!-- FOOTER -->
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://youtube.com/c/FoodVlogz">YouTube</a>
+        <a class="footer-link" href="#">Instagram</a>
+        <a class="footer-link" href="#">Facebook</a>
+        <p class="copyright">©️ 2022 FoodVlogz. All rights reserved.</p>
     </div>
-    <div class="card">
-      <img src="img/desert.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4 class="card-title">Desert</h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit asperiores ratione nemo voluptate, quibusdam </p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
+
 </body>
 
 </html>
