--- a/index.html
+++ b/index.html
@@ -188,16 +188,16 @@
                   Have a look before having a maincourse...
                 </p>
                 <p class="rating-wrapper1">
-             <input type="radio" name="rating" id="star-1">
-             <label for="star-1"></label>
-             <input type="radio" name="rating" id="star-2">
-             <label for="star-2"></label>
-             <input type="radio" name="rating" id="star-3">
-             <label for="star-3"></label>
-             <input type="radio" name="rating" id="star-4">
-             <label for="star-4"></label>
-             <input type="radio" name="rating" id="star-5">
-             <label for="star-5"></label>
+                  <input type="radio" name="rating" id="star-1" />
+                  <label for="star-1"></label>
+                  <input type="radio" name="rating" id="star-2" />
+                  <label for="star-2"></label>
+                  <input type="radio" name="rating" id="star-3" />
+                  <label for="star-3"></label>
+                  <input type="radio" name="rating" id="star-4" />
+                  <label for="star-4"></label>
+                  <input type="radio" name="rating" id="star-5" />
+                  <label for="star-5"></label>
                 </p>
               </div>
             </div>
@@ -210,17 +210,17 @@
                 <h5 class="card-title">Chicken Changezi</h5>
                 <p class="card-text">Are you a gymnast then its for you...</p>
                 <p class="rating-wrapper2">
-                  <input type="radio" name="rating" id="star-1">
+                  <input type="radio" name="rating" id="star-1" />
                   <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2">
+                  <input type="radio" name="rating" id="star-2" />
                   <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3">
+                  <input type="radio" name="rating" id="star-3" />
                   <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4">
+                  <input type="radio" name="rating" id="star-4" />
                   <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5">
+                  <input type="radio" name="rating" id="star-5" />
                   <label for="star-5"></label>
-                     </p>
+                </p>
               </div>
             </div>
           </div>
@@ -234,17 +234,17 @@
                   Wants to have something light, Click here...
                 </p>
                 <p class="rating-wrapper3">
-                  <input type="radio" name="rating" id="star-1">
+                  <input type="radio" name="rating" id="star-1" />
                   <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2">
+                  <input type="radio" name="rating" id="star-2" />
                   <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3">
+                  <input type="radio" name="rating" id="star-3" />
                   <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4">
+                  <input type="radio" name="rating" id="star-4" />
                   <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5">
+                  <input type="radio" name="rating" id="star-5" />
                   <label for="star-5"></label>
-                     </p>
+                </p>
               </div>
             </div>
           </div>
@@ -258,17 +258,17 @@
                   Its always incomplete without dessert...
                 </p>
                 <p class="rating-wrapper4">
-                  <input type="radio" name="rating" id="star-1">
+                  <input type="radio" name="rating" id="star-1" />
                   <label for="star-1"></label>
-                  <input type="radio" name="rating" id="star-2">
+                  <input type="radio" name="rating" id="star-2" />
                   <label for="star-2"></label>
-                  <input type="radio" name="rating" id="star-3">
+                  <input type="radio" name="rating" id="star-3" />
                   <label for="star-3"></label>
-                  <input type="radio" name="rating" id="star-4">
+                  <input type="radio" name="rating" id="star-4" />
                   <label for="star-4"></label>
-                  <input type="radio" name="rating" id="star-5">
+                  <input type="radio" name="rating" id="star-5" />
                   <label for="star-5"></label>
-                     </p>
+                </p>
               </div>
             </div>
           </div>
