--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" href="/CSS/favicon.ico" />
 
     <title>FoodVlogz</title>
   </head>
@@ -48,12 +49,14 @@
                   class="nav-link active hov"
                   id="home"
                   aria-current="page"
-                  href="#"
+                  href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="about" href="#">About</a>
+                <a class="nav-link active" id="about" href="/img/about_us.html"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link active" id="contact" href="#">Contact Us</a>
@@ -277,7 +280,7 @@
     </section>
 
     <!-- FOOD COLUMN -->
-
+    <div class="recipe" id="trending1"><p>Categories...</p></div>
     <section id="main-course">
       <div class="row">
         <div class="card-group">
