--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
               <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
             </form>
             <div class="header-button">
-              <button type="button" class="btn btn-1 btn-dark" id="register">
-                Register
+              <button href="SignUp.html" type="button" class="btn btn-1 btn-dark" id="register">
+                <a id="ejaz" href="SignUp.html">Register</a>
               </button>
               <button type="button" class="btn btn-1 btn-outline-dark">
-                Sign In
+                <a id="ejaz1" href="SignUp.html">Sign In</a>
               </button>
             </div>
           </div>
