--- a/index.html
+++ b/index.html
@@ -59,8 +59,65 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="contact" href="#">Contact Us</a>
+                <a class="nav-link active" id="contact" href="/contactUs.html"
+                  >Contact Us</a
+                >
               </li>
+              <div class="dropdown">
+                <button
+                  class="btn dropdown-toggle"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  States
+                </button>
+                <ul
+                  class="dropdown-menu dropdown-menu-dark"
+                  aria-labelledby="dropdownMenuButton1"
+                >
+                  <div class="dropdown-states">
+                    <div class="box-1">
+                      <li><a href="#" class="states">Andhra Pradesh</a></li>
+                      <li><a href="#" class="states">Assam</a></li>
+                      <li><a href="#" class="states">Arunachal Pradesh</a></li>
+                      <li><a href="#" class="states">Bihar</a></li>
+                      <li><a href="#" class="states">Chhattisgarh</a></li>
+                      <li><a href="#" class="states">Goa</a></li>
+                      <li><a href="#" class="states">Gujrat</a></li>
+                      <li><a href="#" class="states">Haryana</a></li>
+                      <li><a href="#" class="states">Himachal Pradesh</a></li>
+                      <li><a href="#" class="states">Jammu & Kashmir</a></li>
+                    </div>
+
+                    <div class="box-1">
+                      <li><a href="#" class="states">Jharkhand</a></li>
+                      <li><a href="#" class="states">Karnataka</a></li>
+                      <li><a href="#" class="states">Kerela</a></li>
+                      <li><a href="#" class="states">Madhya Pradesh</a></li>
+                      <li><a href="#" class="states">Maharashtra</a></li>
+                      <li><a href="#" class="states">Manipur</a></li>
+                      <li><a href="#" class="states">Meghalaya</a></li>
+                      <li><a href="#" class="states">Mizoram</a></li>
+                      <li><a href="#" class="states">Nagaland</a></li>
+                      <li><a href="#" class="states">Odisha</a></li>
+                    </div>
+
+                    <div class="box-1">
+                      <li><a href="#" class="states">Punjab</a></li>
+                      <li><a href="#" class="states">Rajasthan</a></li>
+                      <li><a href="#" class="states">Sikkim</a></li>
+                      <li><a href="#" class="states">Tamil Nadu</a></li>
+                      <li><a href="#" class="states">Telanghana</a></li>
+                      <li><a href="#" class="states">Tripura</a></li>
+                      <li><a href="#" class="states">Uttar Pradesh</a></li>
+                      <li><a href="#" class="states">Uttarakhand</a></li>
+                      <li><a href="#" class="states">West Bengal</a></li>
+                    </div>
+                  </div>
+                </ul>
+              </div>
             </ul>
             <form class="d-flex">
               <input
@@ -72,7 +129,12 @@
               <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
             </form>
             <div class="header-button">
-              <button href="SignUp.html" type="button" class="btn btn-1 btn-dark" id="register">
+              <button
+                href="SignUp.html"
+                type="button"
+                class="btn btn-1 btn-dark"
+                id="register"
+              >
                 <a id="ejaz" href="SignUp.html">Register</a>
               </button>
               <button type="button" class="btn btn-1 btn-outline-dark">
