--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="about" href="/img/about_us.html"
+                <a class="nav-link active" id="about" href="about_us.html"
                   >About</a
                 >
               </li>
